--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   	
   	},
   "devDependencies": {
+      "coffee-script": "1.2.x",
+      "zappa" : "0.3.x",
       "express" : "2.5.x",
       "mongoose" : "2.5.x"
     },
