--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "node": "~0.4.11"
   },
   "dependencies": {
-  	
   	},
   "devDependencies": {
       "coffee-script": "1.2.x",
       "express" : "2.5.x",
-      "mongoose" : "2.5.x"
+      "mongoose" : "2.5.x",
+      "connect-mongodb" : "1.1.3"
     },
   "optionalDependencies": {}
 }
