--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
       "coffee-script": "1.2.x",
       "express" : "2.5.x",
+      "mongodb" : "0.9.x",
       "mongoose" : "2.5.x",
       "connect-mongodb" : "1.1.3"
     },
