--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git://github.com/alduro/satio.git"
   },
   "engine": {
-    "node": ">= 0.4"
+    "node": "0.4.7"
   },
   "dependencies": {
   	},
