--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "type": "git",
     "url": "git://github.com/alduro/satio.git"
   },
-  "engine": {
-    "node": "0.4.7"
+  "engines": {
+    "node": ">= 0.4.7"
   },
   "dependencies": {
   	},
