--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   	},
   "devDependencies": {
       "coffee-script": "1.2.x",
+      "coffekup" : "0.3.1",
       "express" : "2.5.x",
       "mongodb" : "0.9.x",
       "mongoose" : "2.5.x",
