--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "coffee-script": "1.2.x",
       "coffeekup" : "0.3.1",
       "express" : "2.5.x",
+      "express-namespace" : "0.0.4",
       "mongodb" : "0.9.x",
       "mongoose" : "2.5.x",
       "connect-mongodb" : "1.1.3"
