--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
   	},
   "devDependencies": {
       "coffee-script": "1.2.x",
-      "coffeekup" : "0.3.1",
       "express" : "2.5.x",
       "express-namespace" : "0.0.4",
+      "express-expose" : "0.0.2",
+      "connect-assets" : "2.1.8",
+      "stylus" : "0.24.0",
+      "nib" : "0.3.2",
+      "bootstrap-stylus" : "0.2.1",
       "mongodb" : "0.9.x",
       "mongoose" : "2.5.x",
-      "connect-mongodb" : "1.1.3"
+      "connect-mongodb" : "1.1.3",
+      "crypto" : "0.0.3",
+      "pusher" : "0.0.2",
+      "ejs" : "0.6.1"
     },
   "optionalDependencies": {}
 }
