Major changes on Admin pages - POST CRUD

--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
       "express" : "2.5.x",
       "express-namespace" : "0.0.4",
       "express-expose" : "0.2.2",
-      "connect-assets" : "2.1.8",
-      "stylus" : "0.24.0",
+      "express-messages-bootstrap" : "0.0.8",
       "nib" : "0.3.2",
-      "bootstrap-stylus" : "0.2.1",
+      // "bootstrap-stylus" : "0.2.1",
       "mongodb" : "0.9.x",
       "mongoose" : "2.5.x",
       "connect-mongodb" : "1.1.3",
