--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
       "connect-mongodb" : "1.1.3",
       "crypto" : "0.0.3",
       "pusher" : "0.0.2",
-      "ejs" : "0.6.1"
+      "ejs" : "0.6.1",
+      "stylus" : "0.28.2",
+      "consolidate" : "0.4.0"
     },
   "optionalDependencies": {}
 }
